--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="maintenance-banner">
-		<p>Perhatian: Kami akan melakukan pemeliharaan rutin pada tanggal 18 Juli 2023. Mohon maaf atas ketidaknyamanannya.</p>
+		<p>Last Update: Aug 13 '23 | 05.15pm - Maintenance for new update 18 Aug '23</p>
 		</div>
 		<!-- Sisanya dari konten situs Anda -->
 
